RESOLVED FIXED253922
Table flex-item inside inline-flex with column flex-direction has incorrect cross-size (width)
https://bugs.webkit.org/show_bug.cgi?id=253922
Summary Table flex-item inside inline-flex with column flex-direction has incorrect c...
decademoon.bugzilla
Reported 2023-03-14 17:14:00 PDT
Created attachment 465439 [details] Screenshot of Safari's incorrect rendering and Chrome and Firefox's correct rendering HTML: <div class="container"> <table> <tr> <td>the quick brown fox jumps over the lazy dog</td> </tr> </table> </div> CSS: .container { display: inline-flex; flex-direction: column; } table { border-collapse: collapse; } td { border: 1px solid black; } In Safari 16.3 and Technology Preview 16.4 it renders the table too narrow (as if its width were min-content). Chrome 110 and Firefox 110 render it correctly with width as wide as the text. JsFiddle reproduction: https://jsfiddle.net/1ox8cfnp/
Attachments
Screenshot of Safari's incorrect rendering and Chrome and Firefox's correct rendering (44.08 KB, image/png)
2023-03-14 17:14 PDT, decademoon.bugzilla
no flags
[fast-cq]Patch (3.93 KB, patch)
2023-04-14 15:22 PDT, alan
no flags
Ahmad Saleem
Comment 1 2023-03-16 19:33:10 PDT
Is this same as bug 253928?
decademoon.bugzilla
Comment 2 2023-03-16 20:32:47 PDT
I thought it might be related to that; this might just be two different symptoms of the same underlying bug.
Radar WebKit Bug Importer
Comment 3 2023-03-21 17:14:16 PDT
alan
Comment 4 2023-04-14 15:22:39 PDT
Created attachment 465921 [details] [fast-cq]Patch
EWS
Comment 5 2023-04-15 06:26:12 PDT
Committed 263001@main (13134c656ef8): <https://commits.webkit.org/263001@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 465921 [details].
Note You need to log in before you can comment on or make changes to this bug.