Table flex-item inside inline-flex with column flex-direction has incorrect cross-size (width) https://bugs.webkit.org/show_bug.cgi?id=253922 <rdar://problem/107029563>

Reviewed by Antti Koivisto.

It looks like 237008@main incorrectly applied "overriding logical width" to all preferred width cases, while
according to both the commit message and one of the un-skipped test cases description, only fixed width tables have this requirement.

"<meta name="assert" content="Table's specified width does not count as another min-width for the purposes of the flexbox algorithm.">"

All the un-skipped tests (see 237008@main) are still passing:
imported/w3c/web-platform-tests/css/css-flexbox/table-as-item-percent-width-cell-001.html
imported/w3c/web-platform-tests/css/css-flexbox/table-as-item-specified-width.html
imported/w3c/web-platform-tests/css/css-flexbox/table-item-flex-percentage-width.html
imported/w3c/web-platform-tests/css/css-flexbox/flex-item-contains-strict.html

* LayoutTests/fast/flexbox/flex-with-table-preferred-width-expected.html: Added.
* LayoutTests/fast/flexbox/flex-with-table-preferred-width.html: Added.
* Source/WebCore/rendering/AutoTableLayout.cpp:
(WebCore::AutoTableLayout::applyPreferredLogicalWidthQuirks const):

Canonical link: https://commits.webkit.org/263001@main